deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworldrest
  namespace: scholzma
spec:
  replicas: 3
  selector:
    matchLabels:
        app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: helloworld-rest-service
        image: docker.at41tools.k8s.aws.msgoat.eu/cxp/helloworldrest-scholzma:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: scholzma
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
