deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: scholzma
spec:
  # type: NodePort
  selector:
      app: helloworld
  # ports:
  #     # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
  #   - port: 80
  #     targetPort: 8080
  #     # Optional field
  #     # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
  #     # nodePort: 30007
  # clusterIP: 10.xx.97.97
  type: ClusterIP
  ports:
  - port: 6379
  # targetPort: 6379
