deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: root-mapping
  namespace: scholzma
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 8080
